--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
       <!--===== Home Section Start =====-->
       <section class="home-section" id="home">
           <ul class="header-social"> <!--===== Header Social =====-->
-              <li><a href="#"><i class="fab fa-medium"></i></a></li>
-              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fab fa-github"></i></a></li>
-              <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+              <li><a href="https://medium.com/@spencerkingsley"><i class="fab fa-medium"></i></a></li>
+              <li><a href="https://github.com/spencerkingsley"><i class="fab fa-github"></i></a></li>
+              <li><a href="https://linkedin.com/in/kingsley-onyejiaku-8046ba20a"><i class="fab fa-linkedin"></i></a></li>
           </ul>
           <div class="container">
               <div class="row align-items-center">
@@ -270,75 +269,85 @@
                   <!--===== portfolio-item start =====-->
                   <div class="portfolio-item" data-category="wordpress">
                       <div class="portfolio-item-inner">
-                          <div class="portfolio-img">
-                              <img src="./images/sql unleashed.jpg" alt="">
-                          </div>
-                          <div class="portfolio-info">
-                              <h4>SQL Unleashed: Unlocking The Power of Employee Data for Organizational Insights</h4>
-                              <div class="icon">
-                                  <i class="fa fa-search"></i>
-                              </div>
-                          </div>
+                        <a href="https://github.com/spencerkingsley/SQL-Unleashed">
+                            <div class="portfolio-img">
+                                <img src="./images/sql unleashed.jpg" alt="">
+                            </div>
+                            <div class="portfolio-info">
+                                <h4>SQL Unleashed: Unlocking The Power of Employee Data for Organizational Insights</h4>
+                                <div class="icon">
+                                    <i class="fa fa-search"></i>
+                                </div>
+                            </div>
+                        </a>
                       </div>
                   </div>
                    <!--===== portfolio-item end =====-->
                    <!--===== portfolio-item start =====-->
                   <div class="portfolio-item" data-category="wordpress">
                     <div class="portfolio-item-inner">
-                        <div class="portfolio-img">
-                            <img src="./images/adventureworks.png" alt="">
-                        </div>
-                        <div class="portfolio-info">
-                            <h4>Adventureworks Sales Performance Analysis</h4>
-                            <div class="icon">
-                                <i class="fa fa-search"></i>
+                        <a href="https://app.powerbi.com/view?r=eyJrIjoiMWY2OTgzZDctMjZmYy00MmQwLTlkZmQtNGRkZjMxMGNlMDMzIiwidCI6IjQ0MGMzMzYzLTUwOTYtNDY3NC05MDRhLWVmNWJjMDZhMGVhZSIsImMiOjh9&embedImagePlaceholder=true">
+                            <div class="portfolio-img">
+                                <img src="./images/adventureworks.png" alt="">
                             </div>
-                        </div>
+                            <div class="portfolio-info">
+                                <h4>Adventureworks Sales Performance Analysis</h4>
+                                <div class="icon">
+                                    <i class="fa fa-search"></i>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
                  <!--===== portfolio-item end =====-->
                  <!--===== portfolio-item start =====-->
                    <div class="portfolio-item" data-category="photography">
                     <div class="portfolio-item-inner">
-                        <div class="portfolio-img">
-                            <img src="./images/hr analysis.png" alt="">
-                        </div>
-                        <div class="portfolio-info">
-                            <h4>Analysing HR Data to Improve Employee Retention and Performance</h4>
-                            <div class="icon">
-                                <i class="fa fa-search"></i>
+                        <a href="https://app.powerbi.com/view?r=eyJrIjoiODNjYjIxOWUtZGIyMC00ZjM3LWI2ODItMTc4ZmI2YTM5ZGUyIiwidCI6IjQ0MGMzMzYzLTUwOTYtNDY3NC05MDRhLWVmNWJjMDZhMGVhZSIsImMiOjh9&embedImagePlaceholder=true">
+                            <div class="portfolio-img">
+                                <img src="./images/hr analysis.png" alt="">
                             </div>
-                        </div>
+                            <div class="portfolio-info">
+                                <h4>Analysing HR Data to Improve Employee Retention and Performance</h4>
+                                <div class="icon">
+                                    <i class="fa fa-search"></i>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
                  <!--===== portfolio-item end =====-->
                  <!--===== portfolio-item start =====-->
                    <div class="portfolio-item" data-category="web-design">
                     <div class="portfolio-item-inner">
-                        <div class="portfolio-img">
-                            <img src="./images/mcdonalds.png" alt="">
-                        </div>
-                        <div class="portfolio-info">
-                            <h4>McDonalds Nutrition Analysis</h4>
-                            <div class="icon">
-                                <i class="fa fa-search"></i>
+                        <a href="https://app.powerbi.com/view?r=eyJrIjoiMTk5YzFiMTQtOTg1OC00NzE2LTg0MTktODJmMDJkNDgxODFlIiwidCI6IjQ0MGMzMzYzLTUwOTYtNDY3NC05MDRhLWVmNWJjMDZhMGVhZSIsImMiOjh9">
+                            <div class="portfolio-img">
+                                <img src="./images/mcdonalds.png" alt="">
                             </div>
-                        </div>
+                            <div class="portfolio-info">
+                                <h4>McDonalds Nutrition Analysis</h4>
+                                <div class="icon">
+                                    <i class="fa fa-search"></i>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
                  <!--===== portfolio-item end =====-->
                  <!--===== portfolio-item start =====-->
                    <div class="portfolio-item" data-category="wordpress">
                     <div class="portfolio-item-inner">
-                        <div class="portfolio-img">
-                            <img src="./images/netflix.png" alt="">
-                        </div>
-                        <div class="portfolio-info">
-                            <h4>Analyzing Netflix Data for Business Insights </h4>
-                            <div class="icon">
-                                <i class="fa fa-search"></i>
+                        <a href="https://app.powerbi.com/view?r=eyJrIjoiMzAwNWUxNjgtYWQ0Ni00OGUxLWI4YzUtMTQwNjkwYTYzNjkzIiwidCI6IjQ0MGMzMzYzLTUwOTYtNDY3NC05MDRhLWVmNWJjMDZhMGVhZSIsImMiOjh9&embedImagePlaceholder=true">
+                            <div class="portfolio-img">
+                                <img src="./images/netflix.png" alt="">
                             </div>
-                        </div>
+                            <div class="portfolio-info">
+                                <h4>Analyzing Netflix Data for Business Insights </h4>
+                                <div class="icon">
+                                    <i class="fa fa-search"></i>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
                  <!--===== portfolio-item end =====-->
@@ -350,7 +359,7 @@
       <!--===== Contact Section Start =====-->
        <section class="contact-section section-padding" id="contact">
            <div class="container">
-            <div class="row">
+                <div class="row">
                 <div class="section-title text-align">
                     <h5 class="sub-title">contact</h5>
                     <h3 class="main-title">get in touch</h3>
@@ -360,34 +369,34 @@
                         <li></li>
                     </ul>
                 </div> <!--===== Section Title =====-->
-              </div>
-              <div class="row">
+                </div>
+              <div class="contact-row">
                   <!--===== contact item start =====-->
-                  <div class="contact-item">
+                  <!-- <div class="contact-item">
                       <div class="contact-item-inner">
                           <i class="fas fa-phone"></i>
                           <span>Phone</span>
                           <p>+2348023142104</p>
                       </div>
-                  </div>
+                  </div> -->
                   <!--===== contact item end =====-->
                   <!--===== contact item start =====-->
-                   <div class="contact-item">
-                    <div class="contact-item-inner">
-                        <i class="fas fa-envelope"></i>
-                        <span>Email</span>
-                        <p>spencerkingsley@gmail.com</p>
+                    <div class="contact-item">
+                        <div class="contact-item-inner">
+                            <i class="fas fa-envelope"></i>
+                            <span>Email</span>
+                            <p>spencerkingsley@gmail.com</p>
+                        </div>
                     </div>
-                </div>
                  <!--===== contact item end =====-->
                  <!--===== contact item start =====-->
-                 <div class="contact-item">
+                 <!-- <div class="contact-item">
                     <div class="contact-item-inner">
                         <i class="fas fa-map-marker-alt"></i>
                         <span>Address</span>
                         <p>Lagos, Nigeria</p>
                     </div>
-                </div>
+                </div> -->
                  <!--===== contact item end =====-->
               </div>
                  <!--===== Contact Form =====-->
