--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                       <p> <span>I am a data analyst with a strong engineering background and a passion for analyzing large datasets using tools like Excel, Power BI, SQL to derive valuable insights that drive business growth.</span></p> 
                       <p>I have successfully led a team of talented data analysts on various projects, fostering a collaborative environment that enhances probelm-solving and innovation. As a natural problem solver, I thrive on tackling challenges and finding innovative solutions to enhance efficiency and decision-making processes. </p>
                       <p>Beyond the world of data, I indulge my creative side by making music. This creative outlet not only brings me joy, but also nurtures my ability to think outside the box and approach challenges with a fresh perspective.</p><br>
-                      <a href="https://drive.google.com/file/d/1OGqLm82kSU6Ok41oc1ZUZ8YIcsZgU_3M/view?usp=sharing" class="btn btn-1">Download Resume</a>
+                      <a href="https://drive.google.com/file/d/1GoQYDZhZsLETQchFydSQneeYo77f1_MA/view?usp=drive_link" class="btn btn-1">Download Resume</a>
                           <!-- <div class="about-skills">
                               <div class="skill-item">
                                   <div class="skill-header">
